fixed navbar/footer overflow on mobile

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    width: 100%;
+    width: 100vw;
 
     display: flex;
     flex-direction: column;
@@ -125,6 +125,7 @@ form input#submit:hover {
         align-items: center;
         background-color: #7b5435;
         width: 100%;
+        overflow: hidden;
     }
 
     .navbar span {
@@ -138,7 +139,7 @@ form input#submit:hover {
         justify-content: center;
         align-items: center;
         background-color: #574c51;
-        width: 100%;
+        overflow: hidden;
     }
 
     .footer span {
